--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ actix-files = "0.6.6"
 tera = "1.19.1"
 lazy_static = "1.4.0"
 chrono = "0.4.40"
+sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "mysql"] }
+dotenv = "0.15"
+serde = { version = "1.0", features = ["derive"] }
+base64 = "0.22.1"
+dotenv = "0.15"
